--- a/lab1/app/src/main/res/values/strings.xml
+++ b/lab1/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="app_name">lab2</string>
+    <string name="app_name">lab3</string>
     <string name="input_field">Введіть ваш текст</string>
     <string name="first_font">Adamina</string>
     <string name="second_font">Aldrich</string>
@@ -11,4 +11,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="ok">OK</string>
     <string name="cancel">CLEAR</string>
+    <string name="openStorage">OPEN STORAGE</string>
+    <string name="success">"Дані успішно збережено"</string>
+    <string name="clear_tablet">CLEAR TABLET</string>
 </resources>
